--- a/Examples_Android/SuperpoweredPlayer/soniccloud/CMakeLists.txt
+++ b/Examples_Android/SuperpoweredPlayer/soniccloud/CMakeLists.txt
@@ -12,7 +12,8 @@ cmake_minimum_required(VERSION 3.4.1)
 # Set path of the so file
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../jnilibs/${ANDROID_ABI})
 
-add_library( audio_processing SHARED src/main/cpp/ScDsp.cpp)
+add_library( audio_processing SHARED src/main/cpp/java_interface_wrap.cpp
+                                     src/main/cpp/ScDsp.cpp)
 
 add_definitions(-DANDROID_DRIVER)
 
