--- a/Examples_Android/SuperpoweredPlayer/app/build.gradle
+++ b/Examples_Android/SuperpoweredPlayer/app/build.gradle
@@ -36,19 +36,19 @@ android { // main settings for your application
         }
     }
 
-//    sourceSets{
-//        main{
-//            jniLibs.srcDirs = ['libs']
-//        }
-//    }
+    sourceSets{
+        main{
+            jniLibs.srcDirs = ['libs']
+        }
+    }
 }
 
 dependencies {
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
 
-//    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation project(':soniccloud')
+
+//    implementation project(':soniccloud')
 }
