--- a/Examples_Android/SuperpoweredPlayer/soniccloud/CMakeLists.txt
+++ b/Examples_Android/SuperpoweredPlayer/soniccloud/CMakeLists.txt
@@ -10,7 +10,7 @@ cmake_minimum_required(VERSION 3.4.1)
 # Gradle automatically packages shared libraries with your APK.
 
 # Set path of the so file
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../jnilibs/${ANDROID_ABI})
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../app/libs/${ANDROID_ABI})
 
 add_library( audio_processing SHARED src/main/cpp/ScDsp.cpp)
 
